# html_inspector

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE  README.md  analysis.md  java_rust_differences.md  opensource.md  update_fixtures.sh  validate_fixtures.sh
.github/workflows/: ci.yml
crates/html_inspector/: Cargo.toml  README.md
crates/html_inspector/src/: lib.rs
crates/html_inspector_cli/: Cargo.toml  README.md
crates/html_inspector_cli/src/: main.rs  server.rs  util.rs
crates/html_inspector_cli/tests/: cli_coverage.rs  invalid_html_fixtures.rs
crates/html_inspector_cli/tests/invalid_html_fixtures/: README.md  accessibility_attribute_position.expected.json  accessibility_attribute_position.html  body_twice.expected.json  body_twice.html  css_issue_highlighting.expected.json  css_issue_highlighting.html  large_aria_issues.expected.json  large_aria_issues.html
crates/html_inspector_core/: Cargo.toml  README.md
crates/html_inspector_core/src/: lib.rs
crates/html_inspector_corpus_compare/: Cargo.toml
crates/html_inspector_corpus_compare/src/: main.rs
crates/html_inspector_css/: Cargo.toml
crates/html_inspector_css/src/: lib.rs
crates/html_inspector_html/: Cargo.toml
crates/html_inspector_html/src/: html5ever_rcdom.rs  html5ever_source.rs  lib.rs  named_entities.rs
crates/html_inspector_html_data_bench/: Cargo.toml
crates/html_inspector_html_data_bench/src/: main.rs
crates/html_inspector_inprocess_bench/: Cargo.toml
crates/html_inspector_inprocess_bench/src/: main.rs
crates/html_inspector_rules_aria/: Cargo.toml
crates/html_inspector_rules_aria/src/: lib.rs
crates/html_inspector_rules_aria/src/rules/: aria_activedescendant_requires_descendant_or_owns_warning.rs  aria_br_wbr_constraints.rs  aria_checked_allowed_role.rs  aria_checked_on_checkbox.rs  aria_deprecated_attributes.rs  aria_disabled_on_a_with_href_warning.rs  aria_disabled_unnecessary_on_disabled_warning.rs  aria_expanded_with_command.rs  aria_expanded_with_popovertarget.rs  aria_global_properties_on_main_warning.rs  aria_haspopup_on_datalist_input_warning.rs  aria_hidden_constraints.rs  aria_idref_exists.rs  aria_multiple_main_warning.rs  aria_naming_prohibited_by_role.rs  aria_placeholder_with_placeholder.rs  aria_pressed_requires_role.rs  aria_properties_supported_by_role.rs  aria_readonly_requires_context.rs  aria_role_hierarchy_constraints.rs  aria_select_role_constraints.rs  aria_selected_on_option.rs  aria_summary_constraints.rs  aria_tabpanel_required_for_active_tab.rs  mod.rs  shared.rs  tests.rs
crates/html_inspector_rules_css/: Cargo.toml
crates/html_inspector_rules_css/src/: lib.rs
crates/html_inspector_rules_html/: Cargo.toml
crates/html_inspector_rules_html/src/: lib.rs
crates/html_inspector_rules_html/src/rules/: a_download_constraints.rs  a_href_button_descendant.rs  a_href_constraints.rs  a_transparent_content_model.rs  accesskey_constraints.rs  address_constraints.rs  area_coords_constraints.rs  area_href_constraints.rs  area_map_ancestor.rs  aria_multiselectable_on_select_warning.rs  article_heading_warning.rs  attribute_not_allowed_constraints.rs  audio_src_constraints.rs  audio_transparent_content_model.rs  autocomplete_constraints.rs  autofocus_constraints.rs  base_element_constraints.rs  base_href_constraints.rs  base_in_body.rs  bdo_dir.rs  blockquote_cite_constraints.rs  button_formaction_constraints.rs  canvas_transparent_content_model.rs  commandfor_constraints.rs  content_security_policy_warnings.rs  csp.rs  data_attribute_constraints.rs  del_cite_constraints.rs  del_datetime_constraints.rs  del_ins_transparent_content_model.rs  details_summary_constraints.rs  dialog_constraints.rs  dl_child_content.rs  dl_div_child_content.rs  dl_div_group_constraints.rs  dl_duplicate_dt_name.rs  dl_structure_constraints.rs  doctype_required.rs  dt_descendant_constraints.rs  duplicate_id.rs  (+138 more)
crates/html_inspector_rules_html/src/rules/table_constraints/: state.rs  util.rs  validate.rs
crates/html_inspector_rules_i18n/: Cargo.toml
crates/html_inspector_rules_i18n/src/: lib.rs
crates/html_inspector_rules_i18n/src/rules/: lang_constraints.rs  lang_detect_warnings.rs  meta_charset.rs  meta_http_equiv_charset.rs  mod.rs  tests.rs  unicode_normalization_nfc_warning.rs  xml_lang_consistency.rs
crates/html_inspector_wpt_cli/: Cargo.toml
crates/html_inspector_wpt_cli/src/: main.rs
crates/markup5ever_rcdom/: Cargo.toml  lib.rs
fixtures/wpt_html_results/: _meta.md
fixtures/wpt_html_results/html/canvas/: canvas-sibling-index-crash.html.md  text-metrics-for-unpaintable-crash.html.md
fixtures/wpt_html_results/html/capability-delegation/: delegate-fullscreen-request-popup-cross-origin.https.sub.tentative.html.md  delegate-fullscreen-request-popup-same-origin.https.tentative.html.md  delegate-fullscreen-request-subframe-cross-origin.https.sub.tentative.html.md  delegate-fullscreen-request-subframe-same-origin.https.tentative.html.md  delegation-consumes-activation.https.tentative.html.md  delegation-sender-checks.tentative.html.md
fixtures/wpt_html_results/html/cross-origin-embedder-policy/: about-blank-popup.https.html.md  blob.https.html.md  block-local-documents-inheriting-none.https.html.md  cache-storage-reporting-dedicated-worker.https.html.md  cache-storage-reporting-document.https.html.md  cache-storage-reporting-service-worker.https.html.md  cache-storage-reporting-shared-worker.https.html.md  coep-frame-javascript.https.html.md  coep-on-response-from-service-worker.https.html.md  data.https.html.md  dedicated-worker-cache-storage.https.html.md  dedicated-worker.https.html.md  header-parsing.https.html.md  iframe-history-none-require-corp.https.html.md  javascript.https.html.md  meta-http-equiv.https.html.md  no-secure-context.html.md  non-initial-about-blank.https.html.md  none-load-from-cache-storage.https.html.md  none-sw-from-none.https.html.md  none.https.html.md  (+22 more)
scripts/: bench_html_data.sh  coverage.sh  generate_vnu_manifest.py  profile_callgrind_server.sh  profile_valgrind.sh  verify_vnu_all.sh
tests/: manifest.jsonl
(+10078 files in other folders)
