[workspace]
members = ["crates/*"]
exclude = ["crates/markup5ever_rcdom"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.93"
repository = "https://github.com/Auto-Explore/html_inspector"
homepage = "https://github.com/Auto-Explore/html_inspector"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
base64 = "0.22"
css_inspector = "0.2"
rustc-hash = "2"

[profile.release-with-debug]
inherits = "release"
debug = 2
incremental = false
strip = false
