[package]
name = "html_inspector_cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
html_inspector_core = { path = "../html_inspector_core" }
html_inspector_html = { path = "../html_inspector_html", features = ["html5ever"] }
html_inspector_rules_html = { path = "../html_inspector_rules_html" }
html_inspector_rules_aria = { path = "../html_inspector_rules_aria" }
html_inspector_rules_i18n = { path = "../html_inspector_rules_i18n" }
html_inspector_rules_css = { path = "../html_inspector_rules_css" }
html_inspector_css = { path = "../html_inspector_css" }
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
