[package]
name = "html_inspector_html"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
# Default to the lightweight built-in scanner.
default = ["simple"]
simple = []
# Production-grade HTML5 parsing backend (tokenizer + tree builder).
html5ever = ["dep:html5ever", "dep:markup5ever", "dep:markup5ever_rcdom"]

[dependencies]
html_inspector_core = { path = "../html_inspector_core" }
thiserror.workspace = true
html5ever = { version = "0.38", optional = true }
markup5ever = { version = "0.38", optional = true }
markup5ever_rcdom = { version = "0.36", optional = true }
