[package]
name = "html_inspector_rules_aria"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false
description = "ARIA/a11y rule pack for html_inspector."
keywords = ["html", "aria", "a11y", "validator"]
categories = ["web-programming"]

[dependencies]
html_inspector = { path = "../html_inspector", version = "0.1.0" }
rustc-hash.workspace = true
