[package]
name = "html_inspector_rules_html"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "HTML rule pack for html_inspector."
keywords = ["html", "validator", "lint", "web"]
categories = ["web-programming"]

[dependencies]
html_inspector = { path = "../html_inspector", version = "0.1.0" }
base64.workspace = true
serde_json.workspace = true
rustc-hash.workspace = true
sha2 = "0.10"
url = "2"

[dev-dependencies]
html_inspector_html = { path = "../html_inspector_html", version = "0.1.0", features = ["html5ever"] }
