[package]
name = "html_inspector_wpt_cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Run html_inspector against vendored WPT/VNU-style fixtures."
publish = false

[dependencies]
html_inspector_core = { path = "../html_inspector_core" }
html_inspector_html = { path = "../html_inspector_html", features = ["html5ever"] }
html_inspector_rules_html = { path = "../html_inspector_rules_html" }
html_inspector_rules_aria = { path = "../html_inspector_rules_aria" }
html_inspector_rules_i18n = { path = "../html_inspector_rules_i18n" }
html_inspector_rules_css = { path = "../html_inspector_rules_css" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
rustc-hash.workspace = true
